# chutes-api

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  api-debug.deploy.yaml  audit_exporter.py  balance_refresher.py  cacher.py  chute_autoscaler.py  docker-compose-gpu.yml  docker-compose-miner.yml  docker-compose.yml  downscaler.py  failed_chute_cleanup.py  log_prober.py  pyproject.toml  request_hash_dns.py  requirements.txt  setup.py  tasks.py  watchtower.py
ansible/: extras.yml  inventory.yml  join-cluster.yml  site.yml  wireguard.yml
ansible/templates/: 99-custom-routes.yaml.j2  wg0-primary.conf.j2  wg0-worker.conf.j2
api/: .util.py.swp  affine.py  autostaker.py  config_guesser.py  connection_debug.py  constants.py  event_socket_server.py  exceptions.py  gpu.py  graval.py  graval_server.py  graval_worker.py  guesser.py  main.py  metasync.py  miner_client.py  permissions.py  redis_pubsub.py  socket.py  socket_server.py  socket_shared.py  util.py  utils.py  watchtower.py
api/api_key/: response.py  router.py  schemas.py  util.py
api/audit/: response.py  router.py  schemas.py
api/bounty/: router.py  util.py
api/capacity_log/: schemas.py
api/challenge/: schemas.py
api/chute/: cache_hit_classifier.py  codecheck.py  events.py  response.py  router.py  schemas.py  templates.py  util.py
api/config/: __init__.py
api/database/: __init__.py  orms.py
api/fmv/: fetcher.py  router.py  schemas.py
api/fs_challenge/: schemas.py
api/image/: events.py  forge.py  response.py  router.py  schemas.py  util.py
api/instance/: graval_proxy.py  response.py  router.py  schemas.py  util.py
api/invocation/: cache.py  router.py  schemas.py  util.py
api/job/: response.py  router.py  schemas.py
api/logo/: router.py  schemas.py  util.py
api/metrics/: aema.py  capacity.py  perf.py  util.py  vllm.py
api/migrations/: 20241101123129_create_invocations.sql  20241101150057_invocation_indices.sql  20241106123144_add_bounties.sql  20241113160543_add_node_seed.sql  20241113191447_udpate_nodes.sql  20241118131550_add_chute_code_version.sql  20241122174045_add_chute_ref_str.sql  20241128104225_add_logos_descriptions.sql  20241201113452_add_wallet_secret.sql  20241211122523_developer_permissions.sql  20241212104206_payment_reason.sql  20241213085609_validator_free_accounts.sql  20241214121531_subnet_owner_free_accounts.sql  20241214123318_unique_host_port.sql  20241214144031_consecutive_failures.sql  20241216101012_image_tag_sort.sql  20241217110214_parent_invocation_id.sql  20241221115644_standard_template_metrics.sql  20241227084133_report_separation.sql  20241229094223_audits.sql  20241229142051_fingerprint_idx.sql  20241231195935_tagline.sql  20250117101020_instance_verification_error.sql  (+35 more)
charts/: Chart.yaml  chutes-prod.yaml  exporter-cm.yaml  values.yaml
data/: buildah_cleanup.sh  cache_hit_cluster_params.json  containers.conf  dev-config.ini  diffusion_example.py  example.md  forge-seccomp.json  generate_fs_challenge.sh  micro.py  registry-auth-nginx.conf  trivy_scan.sh  vllm.Dockerfile  vllm_example.py
dev/: bootstrap.sh  dev.md  tasks.py
docs/: dev.md
helm/: Chart.yaml  install.sh  values.yaml  values_minio.yaml  values_observability.yaml  values_postgres.yaml  values_redis.yaml  values_vault.yaml
metasync/: config.py  constants.py  database.py  set_weights_on_metagraph.py  shared.py  sync_metagraph.py
nv-attestation-service/: Makefile  pyproject.toml
run_api/: constants.py  exceptions.py  gpu.py  main.py  metasync.py  utils.py
src/: main.py
tests/: conftest.py
(+142 files in other folders)
